--- a/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
@@ -56,6 +56,23 @@ body {
   margin: 20px;
 }
 
+/* Main */
+
+.banner-section {
+}
+
+.special-products {
+}
+
+.special-products__group {
+}
+
+.special-products__title {
+}
+
+.special-products__container {
+}
+
 /* Footer */
 
 footer {
