--- a/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
@@ -1,12 +1,12 @@
 /* Global styling */
 
 body {
-  background-color: #d9d9d9;
+  background-color: #C4AF88;
 }
 
 /* Top banner */
 .header-banner {
-  background-color: #51c6f8;
+  background-color: #730D1F;
   display: flex;
   justify-content: space-between;
   padding: 1rem;
@@ -19,7 +19,7 @@ body {
   font-size: 45px;
   white-space: nowrap;
   padding: 12px;
-  color: white;
+  color: #fff8e1;
   text-shadow: 0px 2px 4px rgb(102, 102, 102);
 }
 
@@ -36,7 +36,7 @@ body {
   margin: 0;
   display: flex;
   gap: 3rem;
-  color: white;
+  color: #fff8e1;
 }
 
 /*Pointer effects for buttons*/
