--- a/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
@@ -1,12 +1,12 @@
 /* Global styling */
 
 body {
-  background-color: #C4AF88;
+  background-color: #c4af88;
 }
 
 /* Top banner */
 .header-banner {
-  background-color: #730D1F;
+  background-color: #730d1f;
   display: flex;
   justify-content: space-between;
   padding: 1rem;
@@ -82,6 +82,17 @@ body {
 
 .banner-section {
   display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 24px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: blue;
+  padding: 10px;
+}
+
+.banner-section__banner {
+  height: 140px;
+  grid-column: span 4 / auto;
 }
 
 .special-products {
