--- a/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
@@ -33,10 +33,10 @@ body {
 .header-nav__list {
   list-style: none;
   padding: 0;
-  margin: 0;
   display: flex;
   gap: 3rem;
   color: #fff8e1;
+  margin-right: 20px;
 }
 
 /*Pointer effects for buttons*/
@@ -48,24 +48,6 @@ body {
 .header-nav__list a {
   color: #fff8e1;
   text-decoration: none;
-}
-
-/* This will remove default background on html button */
-.header-button {
-  font-size: 32px; /* adjust size of fontawesomeicons  */
-
-  background: none;
-  border: none;
-  outline: none;
-
-  padding: 0;
-
-  width: 50px;
-  height: 50px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 #shopping-cart {
