--- a/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
@@ -67,13 +67,16 @@ body {
 }
 
 .banner-section {
-  margin-top: 20px;
-  margin-bottom: 20px;
   background-color: #8c7f65;
-  padding: 10px;
   box-shadow: 0px 2px 4px rgb(78, 78, 78);
+    width: 100%;
 }
 
+.banner-section .img-responsive {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
 /*Styling for product boxes on all pages*/
 
 .product-box {
@@ -143,6 +146,7 @@ body {
 
 /*Styling for special offer sections*/
 .banner-section__banner {
+  padding: 8px;
 }
 
 .special-products {
