--- a/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
@@ -68,7 +68,6 @@ body {
 .header-banner__search-field {
   margin: 0px;
   padding: 0px;
-
   width: 100%;
   max-width: 400px;
   padding: 12px 20px;
@@ -102,6 +101,19 @@ body {
   object-fit: cover;
 }
 /*Styling for product boxes on all pages*/
+
+.cart-section__totalprice {
+  
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: larger;
+  color: #fff8e1;
+  background-color: #730d1f;
+  margin: 16px;
+  padding: 16px;
+  border: 1px solid #730d1f;
+  box-shadow: 0px 2px 2px rgba(82, 82, 82, 0.438);
+}
 
 .product-box {
   font-family: Arial, Helvetica, sans-serif;
